--- a/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.html
@@ -1,1 +1,12 @@
 <app-nav></app-nav>
+
+<h1 class="titulo">Bienvenido Administrador</h1>
+<h4 class="sub-titulo">Formación ADSO</h4>
+<div class="contenedor">
+  <div class="descripción">
+    <p>¡Bienvenido, administrador de la página web Acanner! Nos complace darle la bienvenida a bordo, asumiendo el papel clave de gestionar y administrar la información de nuestros usuarios. Su responsabilidad y flexibilidad son fundamentales para garantizar un entorno seguro y eficiente para todos nuestros usuarios. Confiamos en que su experiencia y habilidades profesionales contribuirán al continuo crecimiento y éxito de nuestra plataforma.</p>
+  </div>
+  <div class="photo">
+    <img src="assets/imagenes/imagenAdmin.png" alt="imagen por el usuario">
+  </div>
+</div>
