--- a/sextoTrimestre/proyecto/src/app/components/marlon/actividad/actividad.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/actividad/actividad.component.html
@@ -27,10 +27,11 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <h3 class="titulo">Crear Actividad</h3>
-        <form (submit)="createActivity()">
+        <form (ngSubmit)="createActivity(form)" #form="ngForm">
           <div class="form-group">
             <label for="nombreArchivo">Nombre del archivo:</label>
             <input [(ngModel)]="newActivity.nombreArchivo" name="nombreArchivo" class="form-control" required>
+            <div *ngIf="form.controls['nombreArchivo'].invalid && (form.controls['nombreArchivo'].dirty || form.controls['nombreArchivo'].touched)" class="text-danger">Diligenciar todos los campos</div>
           </div>
           <div class="form-group">
             <label for="archivo">Subir archivo:</label>
