--- a/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
@@ -27,10 +27,11 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <h3 class="titulo">Crear Asistencia</h3>
-        <form (submit)="createAsistencia()">
+        <form (ngSubmit)="createAsistencia(form)" #form="ngForm">
           <div class="form-group">
-            <label for="nombreArchivo">Numero de Ficha:</label>
+            <label for="nombreArchivo">Número de Ficha:</label>
             <input [(ngModel)]="newAsistencia.nombreArchivo" name="nombreArchivo" class="form-control" required>
+            <div *ngIf="form.controls['nombreArchivo'].invalid && (form.controls['nombreArchivo'].dirty || form.controls['nombreArchivo'].touched)" class="text-danger">Diligenciar todos los campos</div>
           </div>
           <div class="form-group">
             <label for="archivo">Subir archivo:</label>
