--- a/sextoTrimestre/proyecto/src/app/components/marlon/horarios/horarios.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/horarios/horarios.component.html
@@ -27,10 +27,11 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <h3 class="titulo">Crear Horario</h3>
-        <form (submit)="createHorario()">
+        <form (ngSubmit)="createHorario(form)" #form="ngForm">
           <div class="form-group">
-            <label for="nombreArchivo">Horario de la ficha: </label>
+            <label for="nombreArchivo">Horario de la ficha:</label>
             <input [(ngModel)]="newHorario.nombreArchivo" name="nombreArchivo" class="form-control" required>
+            <div *ngIf="form.controls['nombreArchivo'].invalid && (form.controls['nombreArchivo'].dirty || form.controls['nombreArchivo'].touched)" class="text-danger">Diligenciar todos los campos</div>
           </div>
           <div class="form-group">
             <label for="archivo">Subir archivo:</label>
