probando nueva barra

--- a/sextoTrimestre/proyecto/src/app/components/sergio/nav/nav.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/nav/nav.component.html
@@ -15,6 +15,9 @@
       <a class="nav-link" routerLink="/modificar-usuarios">Edición de Usuarios</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="/ver-estadisticas">Ver estadísticas</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
     </li>
   </ul>
