esta el filtro de instructores y una posible vista, aun no definida

--- a/sextoTrimestre/proyecto/src/app/components/allison/registro/registro.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/allison/registro/registro.component.html
@@ -56,6 +56,8 @@
             <select formControlName="ficha" class="form-control">
               <option value="" selected>Numero de ficha</option>
               <option value="2558104">2558104</option>
+              <option value="1800002">1800002</option>
+              <option value="1231236">1231236</option>
             </select>
             <input formControlName="password" type="password" class="form-control password" placeholder="Contraseña" />
             <input formControlName="respuesta_seguridad" type="text" class="form-control security-response"
