--- a/sextoTrimestre/proyecto/src/app/components/sergio/modificar-usuarios/modificar-usuarios.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/modificar-usuarios/modificar-usuarios.component.html
@@ -31,6 +31,8 @@
       <td class="table_true" *ngIf="usuario.editar === true">
         <select name="ficha" id="ficha" formControlName="ficha">
           <option value="2558104">2558104</option>
+          <option value="1800002">1800002</option>
+          <option value="1231236">1231236</option>
         </select>
       <td class="table_true" *ngIf="usuario.editar === true"><input type="email" [value]="usuario.correo"></td>
       <td class="table_true" *ngIf="usuario.editar  === true">
