uní las dos vistas, quedan detalles pendientes por cambiar

--- a/sextoTrimestre/proyecto/src/app/components/sergio/ver-estadisticas/ver-estadisticas.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/ver-estadisticas/ver-estadisticas.component.scss
@@ -7,7 +7,9 @@
   height: 100vh;
 }
 
-
+.container router-outlet {
+  margin-left: 300px; /* Ancho de la barra lateral */
+}
 
 .sidebar {
   width: 200px;
