--- a/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.scss
@@ -1,7 +1,14 @@
 /* statistics-instructores.component.scss */
 
 .container {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: right;
+  // max-width: 1000px; /* Ajusta según sea necesario */
+  // margin: 0 auto; /* Centra el contenedor horizontalmente */
+  // text-align: center;
+  // padding: 0;
 }
 
 h2 {
