--- a/sextoTrimestre/proyecto/src/app/components/sergio/ver-estadisticas/ver-estadisticas.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/ver-estadisticas/ver-estadisticas.component.html
@@ -1,6 +1,18 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<div class="container">
 
+<style>
+  .material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 0;
+    color: white;
+  }
+  </style>
+
+
+<div class="container">
   <div class="sidebar">
     <div class="container-tittle">
       <h2>Acanner</h2>
@@ -28,22 +40,19 @@
     </ul>
   </div>
   <router-outlet></router-outlet>
+
+
+  <div class="containerDerecho">
+
+    <app-statistics-instructores></app-statistics-instructores>
+
+  </div>
 </div>
 
 
 
- <style>
-  .material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 0;
-    color: white;
-  }
-  </style>
 
 
-<span class="material-symbols-outlined">
-  home_app_logo
-  </span>
+
+
+
