--- a/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.scss
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@700&display=swap');
+
+.container-vista{
+  margin-left: 200px;
+  padding: 20px;
+}
 
 .titulo {
-  font-weight: bold;
+  font-family: 'Gowun Batang', serif;
+  font-size: 35px;
+  // font-weight: bold;
   color: #088a88;
   text-align: center;
   margin-top: 20px; /* Reducido el espacio superior */
@@ -8,6 +16,7 @@
 }
 
 .sub-titulo {
+  font-family: 'Gowun Batang', serif;
   color: #333;
   text-align: center;
   margin-bottom: 20px; /* Nuevo margen inferior */
@@ -17,11 +26,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50vh; /* Ajustar según necesidades */
+  height: 90vh; /* Ajustar según necesidades */
 }
 
 .descripción {
-  max-width: 600px;
+  font-size: 17px;
+  max-width: 500px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-color: #fff;
@@ -30,16 +40,16 @@
 }
 
 .photo {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  overflow: hidden;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  height: 300px;
+  // border-radius: 50%;
+  // overflow: hidden;
+  // box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .photo img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 50%;
+  // border-radius: 10%;
 }
