--- a/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
@@ -8,73 +8,69 @@
     <link rel="icon" type="icon" href="../../assets/imagenes/LOGO ACANNER SIN FONDO.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <style>
-        .titulo {
-            font-size: 32px;
-            font-weight: bold;
-            background:  #008a88;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-
-        .subtitulo {
-            font-size: 24px;
-        }
-
-        .descripcion {
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="vista-instructor.component.css">
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" routerLink="/vista-instructor">
-                <img src="../../assets/imagenes/LOGO SIN FONDO.png" alt="Logo de la página" width="51" height="50">
-                A C A N N E R
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/blog">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/actividad">Actividades</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/asistencia">Asistencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/horario">Horario</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/perfil"><img src="../../assets/imagenes/perfil_ins.png"
-                                alt="Logo de la página" width="30" height="30"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" (click)="logout()"><img src="../../assets/imagenes/salir.png"
-                                alt="Logo de la página" width="28" height="28"></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
-    <div class="container text-center">
-        <h1 class="titulo mt-5">BIENVENIDO INSTRUCTOR</h1>
-        <h2 class="subtitulo">FORMACION ADSO</h2>
-        <div class="descripcion mt-4">
-            <p>Bienvenido a ACANNER una plataforma que te va a facilitar el manejo de tu tiempo, tendrás una mejor
-                organización en tus actividades y estamos vinculados con el SENA (SERVICIO NACIONAL DE APRENDIZAJE).</p>
-        </div>
-        <div class="mt-4">
-            <img src="../../assets/imagenes/software.png" alt="Imagen de referencia" width="400" height="300">
+<header class="navbar navbar-expand-lg navbar-light" style="background-color: #088a88;">
+    <div class="container">
+        <a class="navbar-brand" routerLink="/vista-instructor">
+            <img src="../../assets/imagenes/LOGO SIN FONDO.png" alt="Logo de la página" width="51" height="50">
+            Acanner
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/perfil">
+                        <img src="../../assets/imagenes/perfil_ins.png" alt="Logo de la página" width="18" height="18">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/blog">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/actividad">Actividades</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/asistencia">Asistencia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/horario">Horario</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" (click)="logout()">Cerrar Sesion</a>
+                </li>
+            </ul>
         </div>
     </div>
+</header>
+<div class="container text-start mt-3">
+    <button class="btn btn-light rounded p-2" routerLink="/estadisticas" title="Estadísticas">
+        <i class="bi bi-bar-chart-line"></i><img src="../../assets/imagenes/estadistic.png" alt="Logo de la página" width="25" height="25">
+    </button>
+</div>
+
+    <!-- Contenido de la sección de bienvenida -->
+    <div class="container text-center welcome-container">
+        <div class="welcome-content">
+            <div class="text-content">
+                <h1 class="titulo mt-5">BIENVENIDO INSTRUCTOR</h1>
+                <h3 class="subtitulo">FORMACION ADSO</h3>
+                <div class="descripcion mt-4">
+                    <p>Bienvenido a ACANNER, una plataforma que te facilitará el manejo del tiempo, brindándote una mejor organización en tus actividades. Estamos vinculados con el SENA (SERVICIO NACIONAL DE APRENDIZAJE).</p>
+                </div>
+            </div>
+            <div class="image-container mt-4">
+                <img src="../../assets/imagenes/software.png" alt="Imagen de referencia" width="400" height="300">
+            </div>
+        </div>
+    </div>
+    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-dfMOjQaDuBlqVuL2yGEG6xB4MAHg6ZScQqLQ+KH6qlw1xljDIQ6FAVfHS8ubAj4g"
         crossorigin="anonymous"></script>
