--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
@@ -1,10 +1,7 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<nav class="navbar">
   <div class="container-fluid">
-    <img src="assets/imagenes/LOGO SIN FONDO.png" class="nav-img" alt="icono">
-    <a class="nav-link nombre" href="#">A C A N N E R</a>
-    <div class="navbar">
-      <div class="navbar">
+    <a class="nav-link nombre" >Acanner</a>
         <div class="menu-icon" (click)="toggleMenu()">
           <div class="bar"></div>
           <div class="bar"></div>
@@ -12,12 +9,7 @@
         </div>
         <ul [ngClass]="{'nav': true, 'show-menu': isMenuOpen}">
             <li class="nav-item">
-              <a routerLink="/perfil-detalle" class="nav-link active" aria-current="page">
-                <i class="fas fa-user"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/ver-blog" class="nav-link active" aria-current="page">Blog</a>
+              <a routerLink="/ver-blog" class="nav-link" aria-current="page">Blog</a>
             </li>
             <li class="nav-item">
               <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
@@ -28,12 +20,24 @@
             <li class="nav-item">
               <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
-            </li>
+            <div class="dropdown">
+              <button class="dropdown-button">
+                <span class="material-symbols-outlined">arrow_drop_down</span>
+              </button>
+              <div class="dropdown-content">
+                <li class="nav-item">
+                  <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
+                </li>
+                <li class="nav-item">
+                  <a routerLink="/perfil-detalle" class="nav-link " aria-current="page">Ver Perfil</a>
+                </li>
+                <li class="nav-item">
+                  <a routerLink="/estadisticas" class="nav-link">Estadísticas</a>
+                </li>
+              </div>
+            </div>
+            
         </ul>
-      </div>
-    </div>
   </div>
 </nav>
 <h1 class="titulo">Bienvenido Aprendiz</h1>
