--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 .titulo {
     color: #0a7775;
     font-weight: bold;
@@ -23,35 +25,26 @@
     height: 300px;
     width: 400px;
 }
-.nav-img{
-    width: 50px;
-}
-  
-/* Estilos para el menú hamburguesa */
-  
-  .nav ul {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
+
+/* Estilos Nav */
+  nav{
+    background-color: #008a88;
   }
-  
+ 
+/* Estilos para el menú hamburguesa */
   .nav .nav-item {
     cursor: pointer;
     margin-bottom: 5px;
   }
   
   .nav-link {
-    color: #070707;
+    color: white;
   }
   .nombre{
-    color: black;
-    font-weight: bold;
+    color: white;
+    font-size: 25px;
+    font-family: 'Lobster',sans-serif;
   }
-  
-  .nav-item:last-child .btn-primary {
-    cursor: pointer;
-  }
-  
   
   .menu-icon {
     cursor: pointer;
@@ -61,11 +54,11 @@
   .menu-icon .bar {
     width: 20px;
     height: 3px;
-    background-color: #088a88;
+    background-color: white;
     margin: 6px 0;
   }
   
-  /* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
+/* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
   .show-menu .menu-icon {
     display: block;
   }
@@ -79,7 +72,7 @@
     margin: 10px 0;
   }
   
-  /* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
+/* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
   @media (max-width: 601px) {
     .navbar {
       display: flex;
@@ -111,18 +104,53 @@
     }
   }
 
-//RESPONSIVE
-@media (max-width: 801px){
+/* Resonsive */
+  @media (max-width: 1200px){
 
-  .imagen {
-    margin-top: 40px;
-    margin-left: 5px;
-    height: 300px;
-    width: 400px;
+    .imagen {
+      margin-top: 40px;
+      margin-left: 5px;
+      height: 300px;
+      width: 400px;
+    }
   }
-}
 
+/* Estilo del dropdown */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
 
+  .dropdown-content { 
+    display: none;
+    position: absolute;
+    background-color: #008a88;
+    min-width: 160px;
+    border-radius: 10px; /* Añadido para esquinas redondas */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
 
+  .dropdown:hover .dropdown-content {
+    display: block;
+    left: -140px; 
+  }
 
+  .dropdown-button {
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+      background-color: #008a88;
+  }
 
+  .dropdown-item {
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+    color: #333;
+  }
+
+  .dropdown-item:hover {
+    background-color: #ddd;
+  }
