actualizaciones vista aprendiz

--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
@@ -22,21 +22,20 @@
             </li>
             <div class="dropdown">
               <button class="dropdown-button">
-                <span class="material-symbols-outlined">arrow_drop_down</span>
+                <span class="material-symbols-outlined">more_horiz</span>
               </button>
               <div class="dropdown-content">
                 <li class="nav-item">
-                  <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
+                  <a class="nav-link otro" (click)="logout()">Cerrar Sesión</a>
                 </li>
                 <li class="nav-item">
-                  <a routerLink="/perfil-detalle" class="nav-link " aria-current="page">Ver Perfil</a>
+                  <a routerLink="/perfil-detalle" class="nav-link otro " aria-current="page">Ver Perfil</a>
                 </li>
                 <li class="nav-item">
-                  <a routerLink="/estadisticas" class="nav-link">Estadísticas</a>
+                  <a routerLink="/estadisticas" class="nav-link otro ">Estadísticas</a>
                 </li>
               </div>
-            </div>
-            
+            </div> 
         </ul>
   </div>
 </nav>
