--- a/sextoTrimestre/proyecto/src/app/components/allison/login/login.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/allison/login/login.component.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="row col-12">
         <div class="col-12 col-md-6 left_section section_login">
-            <img class="image_login" src="assets/imagenes/logo en blanco.png" alt="Logo">
+            <img class="image_login" src="assets/imagenes/logo-en-blanco.png" alt="Logo">
         </div>
         <div class="col-12 col-md-6 right_section">
             <h2 class="title_right_section">
