--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
@@ -45,6 +45,5 @@
     <p >Bienvenido a ACANNER, una plataforma que busca mejorar la gestión del tiempo y el control de tus actividades pendientes. Destacamos por nuestra colaboración con el SENA (Servicio Nacional de Aprendizaje), lo que te proporciona acceso a recursos educativos para enriquecer tu crecimiento personal y profesional.</p>
   </div>
   <div class="imagen">
-    <img class="imagen img-fluid" src="https://www.negitec.com/nicaragua/wp-content/uploads/sites/4/2020/05/desarrollo-software.png" alt="Descripción de la imagen">
+    <img class="imagen img-fluid" src="assets/imagenes/Aprendiz.png" alt="Aprendiz">
   </div>
-
