--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.scss
@@ -1,29 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 .titulo {
-    color: #0a7775;
+    color: #008a88;
+    font-size: 50px;
     font-weight: bold;
-    text-align: center;
-    margin-top: 2%;
+    text-align: left;
+    margin-left: 200px;
+    margin-top: 10%;
+    font-family: 'Lobster',sans-serif;
 }
 .sub-titulo{
     font-weight: bold;
-    text-align: center; 
+    text-align: left; 
+    margin-left: 325px;
+    margin-top: 30px;
+    font-size: 20px;
 }
 .descripción {
+    font-size: medium;
     font-weight: bold;
     text-align: center;
-    margin-top: 50px;
-    margin-left: 20%;
-    width: 250px; 
-    height: 300px;
+    margin-top: 15px;
+    margin-left: 18%;
+    width: 325px; 
+    height: 350px;
 }
 
 .imagen {
-    margin-top: -150px;
-    margin-left: 300px;
+    margin-top: -220px;
+    margin-left: 350px;
     height: 300px;
-    width: 400px;
+    width: 500px;
+    border-radius: 10px;
 }
 
 /* Estilos Nav */
@@ -105,16 +113,6 @@
     }
   }
 
-/* Resonsive */
-  @media (max-width: 1200px){
-
-    .imagen {
-      margin-top: 40px;
-      margin-left: 5px;
-      height: 300px;
-      width: 400px;
-    }
-  }
 
 /* Estilo del dropdown */
   .otro {
