--- a/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.scss
@@ -1,44 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 .perfil-detalle {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 3px 5px rgba(10, 10, 10, 0.1);
-    max-width: 500px;
-    width: 80%;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    
+  margin-left: 200px;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 1000px; 
+  height: 300px;
+}
+.foto {
+  margin-right: -1000px;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.font-weight-bold{
+  font-weight: bold;
 }
 
-.card-img-top.small-centered {
-    border-radius: 50%;
-    max-width: 150px; 
-    margin: 0 auto;
-    display: block;
+span {
+  font-weight: normal;
 }
 
-  
-.nav-img{
-    width: 50px;
-}
-
-.navbar {
-    display: flex;
-    align-items: center;
-}
-
-.nombre {
-    font-weight: bold;
-    flex-grow: 15; 
-    text-align: center; 
-}
-
-button {
+.boton {
     background-color: #088a88;
-    color: #fff; /* Color del texto */
-    padding: 10px 20px; /* Ajusta el tamaño del botón según tus necesidades */
+    color: #fff; 
+    padding: 10px 20px; 
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -47,106 +34,39 @@ button {
   }
   
   /* Estilo de hover del botón */
-  .button:hover {
-    background-color: #159997; /* Nuevo color al pasar el mouse sobre el botón */
+  .boton:hover {
+    background-color: #067e7c; /* Nuevo color al pasar el mouse sobre el botón */
   }
 
 .information{
+    margin-top: 50px;
     text-align: left;
 }
 
 h1 {
-    font-weight: bold;
+    margin-top: 20px;
+    font-size: 50px;
+    margin-left: 400px;
     flex-grow: 15; 
-    text-align: center; 
     color: #088a88;
+    font-family: 'Lobster',sans-serif;
 }
 
- /* Estilos para el menú hamburguesa */
-  
- .nav ul {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
-  }
-  
-  .nav .nav-item {
+  button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px;
     cursor: pointer;
-    margin-bottom: 5px;
+    border: none;
+    border-radius: 5px;
   }
   
-  .nav-link {
-    color: #070707;
-  }
-  .nombre{
-    color: black;
-    font-weight: bold;
-  }
-  
-  .nav-item:last-child .btn-primary {
-    cursor: pointer;
-  }
-  
-  
-  .menu-icon {
-    cursor: pointer;
-    display: none;
-  }
-  
-  .menu-icon .bar {
-    width: 20px;
-    height: 3px;
-    background-color: #088a88;
-    margin: 6px 0;
-  }
-  
-  /* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
-  .show-menu .menu-icon {
-    display: block;
-  }
-  
-  .show-menu .nav {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .show-menu .nav-item {
-    margin: 10px 0;
-  }
-  
-  /* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
-  @media (max-width: 601px) {
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-    }
-  
-    .nav {
-      display: none;
-    }
-  
-    .menu-icon {
-      cursor: pointer;
-      display: block;
-      margin-right: 20px;
-    }
-  
-    /* Estilos para mostrar el menú en pantallas pequeñas */
-    .show-menu .nav {
-      display: flex;
-      flex-direction: column;
-    }
-  
-    .show-menu .nav-item {
-      margin: 10px 0;
-    }
-  
-    .show-menu{
-      display: block;
-    }
+  button:hover {
+    background-color: #0056b3;
   }
 
-  @media (max-width: 601px){
+/* Responsive */
+ @media (max-width: 601px){
 
     .perfil-detalle {
       background-color: #fff;
@@ -163,3 +83,126 @@ h1 {
   }
   
   }
+
+/* Estilos Nav */
+nav{
+  background-color: #008a88;
+}
+
+/* Estilos para el menú hamburguesa */
+.nav .nav-item {
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
+.nav-link {
+  color: white;
+}
+.nombre{
+  padding: 10px;
+  color: white;
+  font-size: 25px;
+  font-family: 'Lobster',sans-serif;
+}
+
+.menu-icon {
+  cursor: pointer;
+  display: none;
+}
+
+.menu-icon .bar {
+  width: 20px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+}
+
+/* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
+.show-menu .menu-icon {
+  display: block;
+}
+
+.show-menu .nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.show-menu .nav-item {
+  margin: 10px 0;
+}
+
+/* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
+@media (max-width: 601px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .menu-icon {
+    cursor: pointer;
+    display: block;
+    margin-right: 20px;
+  }
+
+  /* Estilos para mostrar el menú en pantallas pequeñas */
+  .show-menu .nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .show-menu .nav-item {
+    margin: 0px 0;
+  }
+
+  .show-menu{
+    display: block;
+  }
+}
+
+
+/* Estilo del dropdown */
+.otro {
+  color: #008a88;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content { 
+  display: none;
+  margin-top: 06px;
+  position: absolute;
+  min-width: 160px;
+  border-radius: 10px; /* Añadido para esquinas redondas */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  left: -110px; 
+}
+
+.dropdown-button {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    background-color: #008a88;
+}
+
+.dropdown-item {
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+  color: #333;
+}
+
+.dropdown-item:hover {
+  background-color: #008a88;
+}
