--- a/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACCANER</title>
     <link rel="icon" type="icon" href="../../assets/imagenes/LOGO ACANNER SIN FONDO.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="vista-instructor.component.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-
 <body>
 <header class="navbar navbar-expand-lg navbar-light" style="background-color: #088a88;">
     <div class="container">
@@ -25,8 +25,8 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/perfil">
-                        <img src="../../assets/imagenes/perfil_ins.png" alt="Logo de la página" width="18" height="18">
+                    <a class="nav-link" routerLink="/notificaciones">
+                        <i class="bi bi-bell"></i> 
                     </a>
                 </li>
                 <li class="nav-item">
@@ -42,33 +42,37 @@
                     <a class="nav-link" routerLink="/horario">Horario</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" (click)="logout()">Cerrar Sesion</a>
-                </li>
+                    <a class="nav-link">
+                        <i class="bi bi-three-dots-vertical"></i>
+                    </a>
+                    <ul class="submenu"> 
+                        <li><a class="color" routerLink="/perfil">Perfil</a></li>
+                        <li><a class="color" routerLink="/estadisticas">Estadísticas</a></li>
+                        <li><a (click)="logout()">Cerrar Sesión</a></li>
+                    </ul>
+                </li>                
             </ul>
         </div>
     </div>
 </header>
-<div class="container text-start mt-3">
-    <button class="btn btn-light rounded p-2" routerLink="/estadisticas" title="Estadísticas">
-        <i class="bi bi-bar-chart-line"></i><img src="../../assets/imagenes/estadistic.png" alt="Logo de la página" width="25" height="25">
-    </button>
-</div>
-
     <!-- Contenido de la sección de bienvenida -->
-    <div class="container text-center welcome-container">
-        <div class="welcome-content">
-            <div class="text-content">
-                <h1 class="titulo mt-5">BIENVENIDO INSTRUCTOR</h1>
-                <h3 class="subtitulo">FORMACION ADSO</h3>
-                <div class="descripcion mt-4">
-                    <p>Bienvenido a ACANNER, una plataforma que te facilitará el manejo del tiempo, brindándote una mejor organización en tus actividades. Estamos vinculados con el SENA (SERVICIO NACIONAL DE APRENDIZAJE).</p>
-                </div>
-            </div>
-            <div class="image-container mt-4">
-                <img src="../../assets/imagenes/software.png" alt="Imagen de referencia" width="400" height="300">
+<!-- Contenido de la sección de bienvenida -->
+<div class="container text-center welcome-container">
+    <div class="welcome-content">
+        <div class="text-content">
+            <h1 class="titulo mt-5">¡Bienvenido, Instructor!</h1>
+            <h3 class="subtitulo">Formación ADSO</h3>
+            <div class="descripcion mt-4">
+                <p>Bienvenido a ACANNER, una plataforma que te facilitará el manejo del tiempo, brindándote una mejor organización en tus actividades. Estamos vinculados con el SENA (SERVICIO NACIONAL DE APRENDIZAJE).</p>
             </div>
         </div>
+        <div class="image-container mt-4">
+            <img src="../../assets/imagenes/instructor_b.png" alt="Imagen de referencia" width="300" height="300">
+        </div>
     </div>
+</div>
+
+
     
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
