cambios correctos con la nueva base de datos, modulo allison completo

--- a/sextoTrimestre/proyecto/src/app/components/allison/validacion/validacion.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/allison/validacion/validacion.component.html
@@ -1,11 +1,10 @@
 <html>
 <body>
 
-
   <div class="container">
     <h1>Validación de Seguridad</h1>
     <p>Por favor, responde la pregunta de seguridad:</p>
-    <p>{{ descripcionP }}</p>
+    <p>{{ pregunta }}</p>
     <input [(ngModel)]="respuestaUsuario" type="text" placeholder="Ingrese su respuesta" class="form-control" />
 
     <div class="container_link_form">
