--- a/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.html
@@ -2,7 +2,7 @@
   <div class="degradado"></div>
   <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand black-title" href="#">
-      <img src="assets\imagenes\Acanner.png" alt="Logo" width="120" height="80">
+      <img src="assets\imagenes\LOGO SIN FONDO.png" alt="Logo" width="50" height="50">
       A C A N N E R
     </a>
 
