--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
@@ -24,43 +24,49 @@
             </div>
         </div>
     </header>
-    <div class="container mt-5">
-        <h3 class="titulo">Crear Noticia</h3>
-        <form (ngSubmit)="createNews(form)" #form="ngForm">
-            <div class="form-group">
-              <label for="titulo">Título:</label>
-              <input [(ngModel)]="newNews.titulo" name="titulo" class="form-control" required>
-              <div *ngIf="form.controls['titulo'].invalid && (form.controls['titulo'].dirty || form.controls['titulo'].touched)" class="text-danger">Diligenciar todos los campos</div>
-            </div>
-            <div class="form-group">
-              <label for="contenido">Contenido:</label>
-              <textarea [(ngModel)]="newNews.contenido" name="contenido" class="form-control" required></textarea>
-            </div>
-            <br>
-            <button type="submit" class="btn btn-primary">Guardar</button>
+    <div class="container">
+        <h3 class="titulo">Crear Blog</h3>
+        <form (ngSubmit)="createBlog(form)" #form="ngForm">
+          <div class="form-group">
+            <label for="titulo">Título:</label>
+            <input [(ngModel)]="newBlog.titulo" name="titulo" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="urlImagen">URL de la imagen:</label>
+            <input [(ngModel)]="newBlog.urlImagen" name="urlImagen" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="comentario">Comentario:</label>
+            <textarea [(ngModel)]="newBlog.comentario" name="comentario" class="form-control" required></textarea>
+          </div>
+          <br>
+          <button type="submit" class="btn btn-primary">Guardar</button>
         </form>
-        <h2 class="subtitulo mt-5">Noticias</h2>
-    <ul class="list-group">
-        <li class="list-group-item" *ngFor="let news of newsList">
-            <ng-container *ngIf="!editingNews || news.id !== editingNews.id; else editTemplate">
-                <h4>{{ news.titulo }}</h4>
-                <p>{{ news.contenido }}</p>
-                <button (click)="editNews(news)" class="btn btn-primary">Editar</button>
-                <button (click)="deleteNews(news.id_noticias)" class="btn btn-danger">Eliminar</button>
+      
+        <h2 class="subtitulo mt-5">Blogs</h2>
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let blog of newsList">
+            <ng-container *ngIf="!editingBlog || blog.id !== editingBlog.id; else editTemplate">
+              <h4>{{ blog.titulo }}</h4>
+              <img *ngIf="blog.urlImagen" [src]="blog.urlImagen" alt="Imagen de blog" class="img-fluid" style="max-width: 200px;">
+              <p>{{ blog.comentario }}</p>
+              <p>Fecha de publicación: {{ blog.fecha | date: 'yyyy-MM-dd' }}</p> <!-- Formatea la fecha -->
+              <button (click)="editBlog(blog)" class="btn btn-primary">Editar</button>
+              <button (click)="deleteBlog(blog.id)" class="btn btn-danger">Eliminar</button>
             </ng-container>
             <ng-template #editTemplate>
-                <div class="form-group">
-                    <input [(ngModel)]="editingNews.titulo" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <textarea [(ngModel)]="editingNews.contenido" class="form-control"></textarea>
-                </div>
-                <button (click)="updateNews()" class="btn btn-success">Guardar</button>
-                <button (click)="cancelEdit()" class="btn btn-secondary">Cancelar</button>
+              <div class="form-group">
+                <input [(ngModel)]="editingBlog.titulo" class="form-control" />
+              </div>
+              <div class="form-group">
+                <textarea [(ngModel)]="editingBlog.comentario" class="form-control"></textarea>
+              </div>
+              <button (click)="updateBlog()" class="btn btn-success">Guardar</button>
+              <button (click)="cancelEdit()" class="btn btn-secondary">Cancelar</button>
             </ng-template>
-        </li>
-    </ul>
-    </div>
+          </li>
+        </ul>
+      </div>      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
