--- a/sextoTrimestre/proyecto/src/app/components/sergio/admin-perfil/admin-perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/admin-perfil/admin-perfil.component.html
@@ -12,11 +12,10 @@
         <h1>Perfil Administrador</h1>
         <br>
         <div id="perfil">
-          <p class="bold-p">Primer Nombre: <span id="primerNombre">{{ userData.primer_nombre }}</span></p>
-          <p class="bold-p">Segundo Nombre: <span id="segundoNombre">{{ userData.segundo_nombre }}</span></p>
-          <p class="bold-p">Primer Apellido: <span id="primerApellido">{{ userData.primer_apellido }}</span></p>
-          <p class="bold-p">Segundo Apellido: <span id="segundoApellido">{{ userData.segundo_apellido }}</span></p>
-          <p class="bold-p">Ficha: <span id="ficha">{{ userData.ficha }}</span></p>
+          <p class="bold-p">Primer Nombre: <span id="primerNombre">{{ userData.primerNombre }}</span></p>
+          <p class="bold-p">Segundo Nombre: <span id="segundoNombre">{{ userData.segundoNombre }}</span></p>
+          <p class="bold-p">Primer Apellido: <span id="primerApellido">{{ userData.primerApellido }}</span></p>
+          <p class="bold-p">Segundo Apellido: <span id="segundoApellido">{{ userData.segundoApellido }}</span></p>
           <p class="bold-p">Correo: <span id="correo">{{ userData.correo }}</span></p>
         </div>
         <button (click)="editarInformacion()" class="btn-primary">Editar</button>
