--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
@@ -25,15 +25,17 @@
         </div>
     </header>
     <div class="container">
+      <div class="blog-form">
         <h3 class="titulo">Crear Blog</h3>
-        <form (ngSubmit)="createBlog(form)" #form="ngForm">
+        <form (ngSubmit)="crearBlog()" #form="ngForm">
           <div class="form-group">
             <label for="titulo">Título:</label>
             <input [(ngModel)]="newBlog.titulo" name="titulo" class="form-control" required>
           </div>
           <div class="form-group">
-            <label for="urlImagen">URL de la imagen:</label>
-            <input [(ngModel)]="newBlog.urlImagen" name="urlImagen" class="form-control">
+            <label for="urlImagen">Imagen:</label>
+            <input type="file" (change)="onFileSelected($event)" class="form-control-file">
+            <img *ngIf="imagePreview" [src]="imagePreview" alt="Imagen seleccionada" class="blog-image">
           </div>
           <div class="form-group">
             <label for="comentario">Comentario:</label>
@@ -42,6 +44,7 @@
           <br>
           <button type="submit" class="btn btn-primary">Guardar</button>
         </form>
+    </div>
       
         <h2 class="subtitulo mt-5">Blogs</h2>
         <ul class="list-group">
