cambios modulos katalina/aprendiz

--- a/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.html
@@ -37,7 +37,7 @@
   </div>
 </nav>
 <div class="perfil-detalle">
-  <h1 class="display-6">Tu Perfil</h1>
+  <h1 class="display-6"> </h1>
     <img class="foto"  [src]="usuario.fotoPerfil" alt="Foto de perfil">
   <div class="container">
     <div id="perfil" class="information">
