--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
@@ -1,9 +1,7 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<nav class="navbar">
   <div class="container-fluid">
-    <img src="assets/imagenes/LOGO SIN FONDO.png" class="nav-img" alt="icono">
-    <div class="navbar">
-      <div class="navbar">
+    <a class="nav-link nombre" >Acanner</a>
         <div class="menu-icon" (click)="toggleMenu()">
           <div class="bar"></div>
           <div class="bar"></div>
@@ -11,36 +9,40 @@
         </div>
         <ul [ngClass]="{'nav': true, 'show-menu': isMenuOpen}">
           <li class="nav-item">
-            <a routerLink="/perfil-detalle" class="nav-link active" aria-current="page">
-              <i class="fas fa-user"></i>
-            </a>
-          </li>
-          <li class="nav-item">
             <a routerLink="/indexKatalina" class="nav-link">Inicio</a>
           </li>
-          <li class="nav-item">
-            <a routerLink="/ver-actvidades" class="nav-link active" aria-current="page">Actividades</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
-          </li>
+            <li class="nav-item">
+              <a routerLink="/ver-blog" class="nav-link" aria-current="page">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/ver-actvidades" class="nav-link">Actividades</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
+            </li>
+            <div class="dropdown">
+              <button class="dropdown-button">
+                <span class="material-symbols-outlined">more_horiz</span>
+              </button>
+              <div class="dropdown-content">
+                <li class="nav-item">
+                  <a routerLink="/perfil-detalle" class="nav-link otro " aria-current="page">Ver Perfil</a>
+                </li>
+                <li class="nav-item">
+                  <a routerLink="/estadisticas" class="nav-link otro ">Estadísticas</a>
+                </li>
+              </div>
+            </div> 
         </ul>
-      </div>
-    </div>
   </div>
 </nav>
   <h2 class="subtitulo mt-5">Noticias</h2>
-  <div class="container">
-    <ul class="list-group">
-      <li class="list-group-item" *ngFor="let news of newsList">
-        <div>
-          <h4>{{ news.titulo }}</h4>
-          <p>{{ news.contenido }}</p>
-        </div>
-      </li>
-    </ul>
+  <div class="instagram-div">
+    <!-- Contenido de tu div -->
+    <img src="assets/imagenes/imagen2.png" alt="Descripción de la imagen">
+    <p>Buen diaaaaa</p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
